Add reconstructor file and notebook
This commit adds the first version of the reconstructor module and a
Jupyter notebook for demonstration and testing.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+
+# jupyter checkpoints
+.ipynb_checkpoints/
+
+# data files
 17_b_Wordlog_original.docx
+17_b_Wordlog_original.txt
 17_e_Wordlog.docx
 Gie_Bogaert_20130823_17_GA.xml
